// Copyright 2022 The gRPC Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
// Contains the definitions for a metrics service and the type of metrics
// exposed by the service.
//
syntax = "proto3";

package grpc.testing;

option java_package = "io.grpc.testing.integration";

// TODO (@zivy): fix android-interop-testing dependency and then use orca proto
message TestOrcaReport {
  double cpu_utilization = 1;
  double memory_utilization = 2;
  map<string, double> request_cost = 3;
  map<string, double> utilization = 4;
}

